<resources>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="keystore_wallet">Keystore Wallet</string>
    <string name="ethereum">Ethereum</string>
    <string name="ethereum_details">Ethereum Wallet</string>
    <string name="account_address">Account Address</string>
    <string name="ether_address">Your Current Ethereum Address</string>
    <string name="private_key">Private Key :</string>
    <string name="public_key">Public Key :</string>
    <string name="profile">Profile</string>
    <string name="available_bal">Ethereum Balance</string>
    <string name="bal">Balance :</string>
    <string name="transaction">Transaction</string>
    <string name="settings">Settings</string>
    <string name="token_list">Token List</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="password_hint">XXXXXX</string>
    <string name="send">Send</string>
    <string name="received">Received</string>
    <string name="eth">ETH</string>
    <string name="sender">Sender</string>
    <string name="network_fee">Network Fee</string>
    <string name="confirmations">Confirmations</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="nonce">Nonce</string>
    <string name="more_details">More Details</string>
    <string name="key_store">Keystore</string>
    <string name="add_token">Add Token</string>
    <string name="net_work">Network</string>
    <string name="import_key">Import Key</string>
    <string name="no_transaction_found">No Transaction Found !</string>

    <string name="ether_wallet_dialog">Are you sure you want Ethereum wallet ?</string>
    <string name="private_key_">Private Key</string>
    <string name="empty_private_key">Please enter private key</string>
    <string name="empty_key_store">Please enter keystore</string>
    <string name="empty_password">Please enter password</string>
    <string name="invalid_password_provided">Invalid password provided</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="transaction_send">Transaction Send Successfully</string>
    <string name="no_contract">no contract code at given address</string>
    <string name="token_already_added">Token has already been added</string>
    <string name="invalid_address">Invalid address</string>
    <string name="something_went_wrong">Something went wrong!!!</string>
    <string name="check_your_internet_connection">Please check your internet connection</string>
    <string name="enter_token_address">Please enter token address</string>

    <string name="empty_wallet">Please enter Wallet address</string>
    <string name="empty_amount">Please enter Amount</string>
    <string name="valid_amount">Please enter Valid Amount</string>
</resources>
