<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/app_back_ground"
    tools:context=".activity.EtherActivity">

    <ImageView
        android:id="@+id/iv_ether"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_ether" />

    <TextView
        android:id="@+id/tv_ether"
        style="@style/MyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_ether"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sunny_spring_day"
        android:gravity="center"
        android:text="@string/ethereum"
        android:textSize="40dp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_create"
            style="@style/MyButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_wallet" />

        <Button
            android:id="@+id/btn_import"
            style="@style/MyButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/import_wallet" />
    </LinearLayout>
</RelativeLayout>