<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp">

        <!-- Password Layout-->

        <FrameLayout
            android:id="@+id/flPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_password"
                    style="@style/MyEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:hint="@string/password_hint"
                    android:maxLines="1"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/eye_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_eye_close"
                    android:tint="@color/blackLight" />

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/text"
            style="@style/MyText"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_above="@+id/flPasswordContainer"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="-45dp"
            android:gravity="start"
            android:text="@string/password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flPasswordContainer">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/MyButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/MyButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/submit" />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>
