<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/app_back_ground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:innerRadius="0dp"
            android:thicknessRatio="1.9"
            card_view:cardBackgroundColor="@color/black"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/black_radius_square"
                android:orientation="vertical">

                <!-- Confirmation Dialog Layout -->

                <TextView
                    android:id="@+id/alertTitle"
                    style="@style/MyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ether_wallet_dialog"
                    android:textColor="@color/blue"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_key"
                        style="@style/MyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/key_store" />

                    <Button
                        android:id="@+id/btn_import"
                        style="@style/MyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:text="@string/import_key" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
