<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_back_ground">

    <include
        android:id="@+id/ic_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ic_toolbar"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <!-- Token Layout-->

        <LinearLayout
            android:id="@+id/lnrTokenContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/black_radius_square"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                style="@style/item_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_token"
                android:textSize="13dp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_ether" />

        </LinearLayout>

        <!-- Network Layout-->

        <LinearLayout
            android:id="@+id/lnrNetContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnrTokenContainer"
            android:layout_marginTop="10dp"
            android:background="@drawable/black_radius_square"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                style="@style/item_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/net_work"
                android:textSize="13dp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:tint="@color/white"
                app:srcCompat="@drawable/icon_test_net" />

        </LinearLayout>

        <!-- Profile Layout-->

        <LinearLayout
            android:id="@+id/lnrProfileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnrNetContainer"
            android:layout_marginTop="10dp"
            android:background="@drawable/black_radius_square"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                style="@style/item_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile"
                android:textSize="13dp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_profile" />

        </LinearLayout>

        <!-- Logout Layout-->

        <LinearLayout
            android:id="@+id/lnrLogoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnrProfileContainer"
            android:layout_marginTop="10dp"
            android:background="@drawable/black_radius_square"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                style="@style/item_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout"
                android:textSize="13dp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_logout" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>